# ChangeLog for media-sound/rexima
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/rexima/ChangeLog,v 1.13 2008/12/20 03:38:42 aballier Exp $

  20 Dec 2008; Alexis Ballier <aballier@gentoo.org> rexima-1.4.ebuild:
  Honour CC and LDLFAGS; dont prestrip files, bug #239890, remove unused sed
  dep, dodoc the changelog too

  03 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  18 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org> rexima-1.4.ebuild:
  Stable sparc.

  22 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org> rexima-1.4.ebuild:
  Added to ~sparc.

  15 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> rexima-1.4.ebuild:
  Stable amd64.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> rexima-1.4.ebuild:
  virtual/glibc -> virtual/libc

  28 May 2004; Danny van Dyk <kugelfang@gentoo.org> rexima-1.4.ebuild:
  Marked ~amd64.

  04 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> rexima-1.4.ebuild:
  ${PN}-${PV} -> ${P}

  04 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> rexima-1.4.ebuild:
  removed incorrect S (bug #46788); use sed -i; IUSE; error messages; tidy

  31 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org> rexima-1.4.ebuild:
  Removed explicot S=.  Stable x86.

*rexima-1.4 (19 Jul 2003)

  19 Jul 2003; jje <jje@gentoo.org> rexima-1.4.ebuild:
  Initial revision.
  
  Submitted by: John Oxley <oxo-gentoo@rucus.ru.ac.za>
